--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,7 +7,7 @@ html, body {
 body {
     padding: 70px;
     /* background-color: #f6f6ef; */
-    background-color: #fc6621;
+    background-color: #808080;
 
 }
 
